css/styles.css
/* Miscellaneous */

@import url(normalize.css);
@import url(wow_styles.css);

:root{
    --gradient-rot: 1turn;
    --color-primary: #2584ff;
    --color-secondary: #00d9ff;
    --color-accent: #ff3400;
    --color-headings: #c4c4c4;
    --color-body: #918ca4;
    --color-body-darker: #5c5577;
    --color-border: #ccc;
    --border-radius: 30px;
}

.container{
    max-width: 1140px;
    margin: 0 auto;
}

/* Topography */

::selection{
    background: var(--color-primary);
    color: white;
}
html{
    font-size: 62.5%;
}
body{
    font-family: Inter, Arial, Helvetica, sans-serif;
    font-size: 2.4rem;
    line-height: 1.5;
    color: var(--color-body);
    background: #181818;
    width: 100%;
    height: 100%;
}
h1, h2, h3{
    color: var(--color-headings);
    margin-bottom: 1rem;
    line-height: 1.1;
}
h1{
    font-size: 7rem;
}
h2{
    font-size: 4rem;
}
h3{
    font-size: 3rem;
    font-weight: 500;
    
}
p{
    margin-top: 0;
}

/* Lists */

.list{
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: space-around;
}
.list__mainchar{
    display: grid;
    grid-template-columns: 5;
}
a{
    text-decoration: none;
    color: white;
}

/* Navigation Bar */

.nav-bar{
    background: #000000;
}
.nav-bar__logo{
    width: 100px;
    padding-top: 1rem;
    filter: invert();
    justify-self: center;
    transition: transform 0.2s;
}
.nav-bar__logo:hover{
    transform: scale(1.1);
}
.nav-bar__item{
    /* background: #918ca4; */
    text-transform: uppercase;
    width: 150px;
    text-align: center;
}


/* Main */
.main__header{
    text-align: center;
    padding-bottom: 2rem;
    background: white;
    background: #000000;
    clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
}
.main__header>h1{
    margin-top: 0rem;
    padding-top: 5rem;
    padding-bottom: 2rem;
}
.main__heading{
    color: var(--color-);
}
.main__body-header{
    font-weight: 250;
    color: white;
    margin-bottom: 5rem;
}
.main__body{
    text-align: center;

}
.wowClass
{
    display: inline-block;
    height: 50rem;
    width: 50rem;
    margin: 0rem auto;
    margin-bottom: 2rem;
}
.wowClass:hover
{
    outline: 0.25em solid var(--color-body-darker);
    outline-offset: -0.25em;
}

.charName
{
    color: white;
    font-weight: 600;    
}
.charImg
{
    width: 100px;
    height: 100px;
    object-fit:contain;
    object-position: 0px 25px;
    transform: scale(10);
    z-index: -4;
    pointer-events: none;
}
.charImg::selection{
    background-color: rgba(0, 0, 0, 0);
}


/* Button */
button{
    background: rgb(0, 0, 0, 0);
    border: none;
    font-weight: 150;
    transition: transform 0.3s;
}
button:hover{
    transform: scale(1.2);
}

/* Footer */
.footer-bar{
    display: flex;
    background: #332e49;
    text-align: center;
    justify-content: center;
    align-content: center;
}
.footer-bar>p{
    font-weight: 150;
    margin: 2rem;
    color: white;
}

/* Grid */
.grid{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    justify-content: center;
    margin: 0 auto;
    gap: 4rem;
}

